<?xml version="1.0"?>
<package>
  <name>huace_navsat_driver</name>
  <version>1.11.0</version>
  <description>
    Package to parse NMEA strings,and send nmea string to localization node. 
  </description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
